feat: add two web components, new files and directories

--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -6,6 +6,19 @@ body {
   background-repeat: repeat;
 }
 
+header {
+  margin-bottom: 25px;
+}
+
+main {
+  width: 95%;
+  margin: 0 auto;
+  height: 100vh;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
 h1, h2, h3, h4, h5 {
   font-family: Roboto;
   font-weight: 700;
