--- a/src/assets/css/phone_directory-app/phoneDirectory.css
+++ b/src/assets/css/phone_directory-app/phoneDirectory.css
@@ -2,4 +2,32 @@
   display: block;
 }
 
+div.main-title-phone-directory {
+  width: 95%;
+  height: 4.75em;
+  background: rgba(206, 221, 229, 0.8);
+  box-sizing: border-box;
+  overflow: auto;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+  margin: 0 auto;
+}
+div.main-title-phone-directory h1 {
+  text-transform: capitalize;
+}
+div.main-title-phone-directory h1 small {
+  display: flex;
+  justify-content: center;
+  text-transform: capitalize;
+}
+div.main-title-phone-directory h1 small a {
+  font-weight: 400;
+  font-style: italic;
+  margin-top: 10px;
+  font-size: 0.7em;
+  color: #A2A694;
+}
+
 /*# sourceMappingURL=phoneDirectory.css.map */
