--- a/src/assets/sass/phone_directory-app/phoneDirectory.sass
+++ b/src/assets/sass/phone_directory-app/phoneDirectory.sass
@@ -1,2 +1,26 @@
 :host
   display: block
+
+div.main-title-phone-directory
+  width: 95%  
+  height: 4.75em
+  background: rgba(206,221,229,.8)
+  box-sizing: border-box  
+  overflow: auto
+  display: flex
+  align-items: center
+  flex-direction: column
+  justify-content: center
+  margin: 0 auto
+  h1
+    text-transform: capitalize
+    small
+      display: flex      
+      justify-content: center
+      text-transform: capitalize
+      a        
+        font-weight: 400
+        font-style: italic
+        margin-top: 10px
+        font-size: .7em      
+        color: #A2A694
