--- a/src/assets/sass/_body.sass
+++ b/src/assets/sass/_body.sass
@@ -3,3 +3,14 @@ body
   font-size: 16px
   background: url('../img/memphis-colorful.png')  
   background-repeat: repeat
+
+header
+  margin-bottom: 25px
+
+main
+  width: 95%
+  margin: 0 auto
+  height: 100vh
+  display: flex
+  flex-direction: row
+  justify-content: space-between
